# LoopAuditioneer

./: .gitignore  .gitmodules  AUTHORS  BUILD-osx.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  InstallInstructions.txt  README.md  README.txt  Win-InstallInstructions.txt  toolchain.def
.github/workflows/: build.yml
FreePixelIcons/: CMakeCache.txt  CMakeLists.txt  FreePixelIcons.h  FreePixelIcons.rar  Makefile  cmake_install.cmake
help/: BatchProcessing.htm  Credits.htm  CrossfadeLoop.htm  CueCreation.htm  CutFade.htm  Features.htm  Index.hhk  Introduction.htm  KeyboardShortcuts.htm  LoopAuditioneerHelp.htm  LoopSettings.htm  LoopsNoGood.htm  MainPanel.htm  MenuBar.htm  NoLoops.htm  PitchDetection.htm  Requirements.htm  SearchAlgorithm.htm  StatusBar.htm  ToolBar.htm  UserInterface.htm  WaveformOverlay.htm
lib-src/: CMakeLists.txt
lib-src/libsamplerate/: aclocal.m4
lib-src/libsndfile/: ChangeLog
lib-src/libsndfile/include/: sndfile.h
lib-src/libsndfile/src/: aiff.c  common.c  common.h  wav.c
lib-src/libsndfile/tests/: command_test.c
resources/: Info.plist  Info.plist.in  LoopAuditioneer.desktop.in  LoopAuditioneer.icns
resources/free-pixel-icons/: readme.txt
scripts/: BundleWxWidgetLibraries.cmake  SignMacOSApp.cmake  build-on-osx.sh  conf-libsndfile-cross.sh  prepare-debian-ubuntu-wx32.sh  prepare-debian-ubuntu.sh  prepare-osx.sh  prepare-ubuntu-appimage.sh  prepare-ubuntu-cross.sh
src/: AudioSettingsDialog.cpp  AudioSettingsDialog.h  AutoLoopDialog.cpp  AutoLoopDialog.h  AutoLooping.cpp  AutoLooping.h  BatchProcessDialog.cpp  BatchProcessDialog.h  CMakeLists.txt  CrossfadeDialog.cpp  CrossfadeDialog.h  CueMarkers.cpp  CueMarkers.h  CutNFadeDialog.cpp  CutNFadeDialog.h  FFT.h  FileHandling.cpp  FileHandling.h  ListInfoDialog.cpp  ListInfoDialog.h  LoopAuditioneer  LoopAuditioneer.cpp  LoopAuditioneer.h  LoopAuditioneerDef.h  LoopAuditioneerDef.h.in  LoopMarkers.cpp  LoopMarkers.h  LoopOverlay.cpp  LoopOverlay.h  LoopOverlayPanel.cpp  LoopOverlayPanel.h  LoopParametersDialog.cpp  LoopParametersDialog.h  MyFrame.cpp  MyFrame.h  MyListCtrl.cpp  MyListCtrl.h  MyPanel.cpp  MyPanel.h  MyResampler.cpp  (+13 more)
src/help/: BatchProcessing.htm  Content.hhc  Credits.htm  CutFade.htm  Features.htm  Header.hhp  Index.hhk  KeyboardShortcuts.htm  LoopAuditioneerHelp.htm  MainPanel.htm  MenuBar.htm  PitchDetection.htm  ToolBar.htm  UserInterface.htm
src/icons/: PlayPositionMarker.xpm
submodules/: libsamplerate.la  libsndfile.la
trunk/: BUILD.txt  CHANGELOG.txt  CMakeLists.txt  InstallInstructions.txt  README.txt  Win-InstallInstructions.txt  toolchain.def
trunk/help/: AutoLoop.htm  Credits.htm  ListInfo.htm  MainPanel.htm  MenuBar.htm  PitchDetection.htm  Requirements.htm  ToolBar.htm
trunk/icons/: index.url
trunk/lib-src/: CMakeLists.txt
trunk/lib-src/libsamplerate/: Makefile.in  configure
trunk/lib-src/libsamplerate/src/: config.h.in
trunk/lib-src/libsndfile/: README
trunk/lib-src/libsndfile/src/: aiff.c  sndfile.c  sndfile.h.in  wav.c
trunk/resources/: LoopAuditioneer.rc.in
trunk/scripts/: conf-libsndfile-cross.sh  prepare-debian-ubuntu.sh
trunk/src/: AudioSettingsDialog.cpp  AudioSettingsDialog.h  AutoLoopDialog.cpp  AutoLoopDialog.h  AutoLooping.cpp  AutoLooping.h  BatchProcessDialog.cpp  BatchProcessDialog.h  CMakeLists.txt  CrossfadeDialog.cpp  CrossfadeDialog.h  CueMarkers.cpp  CueMarkers.h  CutNFadeDialog.cpp  CutNFadeDialog.h  FFT.cpp  FFT.h  FileHandling.cpp  FileHandling.h  ListInfoDialog.cpp  ListInfoDialog.h  LoopAuditioneer.cpp  LoopAuditioneer.h  LoopAuditioneerDef.h  LoopAuditioneerDef.h.in  LoopMarkers.cpp  LoopMarkers.h  LoopOverlay.cpp  LoopOverlay.h  LoopParametersDialog.cpp  LoopParametersDialog.h  MyFrame.cpp  MyFrame.h  MyListCtrl.cpp  MyListCtrl.h  MyPanel.cpp  MyPanel.h  MyResampler.cpp  MyResampler.h  MySound.cpp  (+10 more)
trunk/src/help/: BatchProcessing.htm  Content.hhc  Credits.htm  CrossfadeLoop.htm  Features.htm  GettingStarted.htm  Index.hhk  LoopsNoGood.htm  MainPanel.htm  MenuBar.htm
